--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   },
   "dependencies": {
     "egg": "^2.6.1",
-    "egg-scripts": "^2.6.0",
-    "husky": "4.2.5"
+    "egg-scripts": "^2.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
@@ -51,6 +50,7 @@
     "egg-mock": "^3.16.0",
     "eslint": "^6.7.2",
     "eslint-config-egg": "^8.0.0",
+    "husky": "4.2.5",
     "lint-staged": "10.2.6",
     "prettier": "^2.3.0",
     "tslib": "^1.9.0",
