--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "dependencies": {
     "egg": "^2.6.1",
-    "egg-scripts": "^2.6.0"
+    "egg-scripts": "^2.6.0",
+    "egg-validate": "^2.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
