--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "egg": "^2.6.1",
+    "egg-jwt": "^3.1.7",
     "egg-scripts": "^2.6.0",
     "egg-validate": "^2.0.2"
   },
