breaking: add sequelize、write migration and seeder

--- a/package.json
+++ b/package.json
@@ -31,13 +31,35 @@
     "ci": "npm run lint && npm run cov && npm run tsc",
     "autod": "autod",
     "lint": "eslint . --ext .ts",
-    "clean": "ets clean"
+    "clean": "ets clean",
+    "sequelize:init": "npx sequelize init:config && npx sequelize init:migrations && npx sequelize init:seeders",
+    "migration:create": "run(){ set NODE_ENV=local&&npx sequelize migration:generate --name=$1; }; run",
+    "migration:run": "set NODE_ENV=local&&npx sequelize db:migrate",
+    "migration:undo": "set NODE_ENV=local&&npx sequelize db:migrate:undo",
+    "migration:remove": "set NODE_ENV=local&&npx sequelize db:migrate:undo:all",
+    "migration:run:prod": "set NODE_ENV=production&&npx sequelize db:migrate",
+    "migration:run:dev": "set NODE_ENV=development&&npx sequelize db:migrate",
+    "migration:run:stag": "set NODE_ENV=staging&&npx sequelize db:migrate",
+    "migration:undo:prod": "set NODE_ENV=production&&npx sequelize db:migrate:undo",
+    "migration:remove:prod": "set NODE_ENV=production&&npx sequelize db:migrate:undo:all",
+    "migration:remove:dev": "set NODE_ENV=development&&npx sequelize db:migrate:undo:all",
+    "migration:remove:stag": "set NODE_ENV=staging&&npx sequelize db:migrate:undo:all",
+    "seeder:create": "run(){ set NODE_ENV=local&&npx sequelize seed:generate --name=$1; }; run",
+    "seeder:run": "set NODE_ENV=local&&npx sequelize db:seed:all",
+    "seeder:undo": "set NODE_ENV=local&&npx sequelize db:seed:undo",
+    "seeder:remove": "set NODE_ENV=local&&npx sequelize db:seed:undo:all",
+    "seeder:run:prod": "set NODE_ENV=production&&npx sequelize db:seed:all",
+    "seeder:run:dev": "set NODE_ENV=development&&npx sequelize db:seed:all",
+    "seeder:run:stag": "set NODE_ENV=staging&&npx sequelize db:seed:all",
+    "retest": "yarn migration:remove && yarn migration:run && yarn seeder:run"
   },
   "dependencies": {
     "egg": "^2.6.1",
     "egg-jwt": "^3.1.7",
     "egg-scripts": "^2.6.0",
-    "egg-validate": "^2.0.2"
+    "egg-sequelize": "^6.0.0",
+    "egg-validate": "^2.0.2",
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
@@ -55,6 +77,7 @@
     "husky": "4.2.5",
     "lint-staged": "10.2.6",
     "prettier": "^2.3.0",
+    "sequelize-cli": "^6.2.0",
     "tslib": "^1.9.0",
     "typescript": "^3.0.0"
   },
